[project]
name = "voicebox-tui-demo"
version = "0.1.0"
description = "Textual TUI demo for the Voicebox public API streaming endpoint"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Noah Gorstein", email = "noah.gorstein@stardog.com" }]
dependencies = [
    "textual>=0.60",
    "httpx>=0.27",
]

[project.scripts]
voicebox-tui = "voicebox_tui:main"

[dependency-groups]
dev = ["ruff>=0.6", "ty>0.0.5"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["voicebox_tui.py"]
sources = ["."]
